MFH: 	Fixed bug #27580 (pre-initialization errors in ap2 handler are not 	being written to vhost error log). 	Stop using depreciated and ignored APLOG_NOERRNO directive. 	Make file not found & directory as script invocation error messages 	more descriptive.